--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8" />
   <title>Gráfica Work Print BH</title>
   <meta name="description" content="Gráfica Work Print BH" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="assets/styles/styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css" />
+  <link rel="stylesheet" href="assets/styles/styles.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
@@ -20,77 +21,93 @@
 
 <body>
 
-  <nav class="flex justify-center overflow-x-hidden">
-    <a href="#products" class="link pa3">Produtos</a>
-    <a href="#contact" class="link pa3">Contato</a>
-    <a href="#openhours" class="link pa3">Horários</a>
-    <a href="#address" class="link pa3">Endereço</a>
+  <nav id="nav" class="navbar navbar-expand-sm navbar-light items-baseline">
+    <a class="navbar-brand"> WORK PRINT </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"> <a class="nav-link" href="#products"> Produtos </a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#contact"> Contato </a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#openhours"> Horários </a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#address"> Endereço </a> </li>
+      </ul>
+    </div>
   </nav>
 
   <main class="flex flex-column items-center">
 
     <img id="logo" class="mt4" src="assets/images/logo.png" alt="Logo da Gráfica Work Print BH" />
 
-    <section id="products" class="pt5 pl3 pr3">
+    <section id="products" class="pt5 pl4 pr4">
       <h1>Produtos</h1>
-      <ul>
-        <li>Impressões coloridas e P&B A3, A4, A5</li>
-        <li>Cartões de visita</li>
-        <li>Panfletos</li>
-        <li>Timbrados</li>
-        <li>Agendas</li>
-        <li>Credenciais</li>
-        <li>Marcadores de página</li>
-        <li>Imãs</li>
-        <li>Botons</li>
-        <li>Calendários</li>
-        <li>Cardápios</li>
+      <ul class="three-column">
         <li>Adesivos</li>
-        <li>Etiquetas</li>
-        <li>Rótulos</li>
+        <li>Agendas Personalizadas</li>
         <li>Banners</li>
-        <li>Plotagens P&B linhas</li>
-        <li>Plotagens coloridas</li>
-        <li>Encardenações espiral e wire-o</li>
+        <li>Bottons</li>
+        <li>Cartões de Visita</li>
+        <li>Comandas</li>
+        <li>Cópias Coloridas e P&B</li>
+        <li>Digitalizações</li>
+        <li>Encadernações</li>
+        <li>Folders</li>
+        <li>Impressões Coloridas</li>
+        <li>Plastificações</li>
+        <li>Plotagens</li>
+        <li>Recetuários</li>
       </ul>
     </section>
 
-    <section class="mb4 flex flex-wrap justify-center">
-      <article id="contact" class="pt5 pl3 pr3">
-        <h1>Contato</h1>
-        <a class="db link" href="mailto:workprint@workprintbh.com">
-          <img src="assets/svgs/email.svg" alt="Ícone de email" />
-          workprint@workprintbh.com
-        </a>
-        <a class="db link" href="tel:03125116313">
-          <img src="assets/svgs/phone.svg" alt="Ícone de telefone" />
-          (31) 2511-6313
-        </a>
-        <a class="db link" href="tel:031997738363">
-          <img src="assets/svgs/whatsapp.svg" alt="Ícone de Whatsapp" />
-          (31) 99773-8363
-        </a>
-      </article>
+    <div class="flex justify-center w-100 x">
+      <section id="infos" class="w-100">
+        <article id="contact" class="pt5 pl4 pr4">
+          <h1>Contato</h1>
+          <a class="db link" href="mailto:workprint@workprintbh.com">
+            <img class="icone" src="assets/svgs/email.svg" alt="Ícone de email" />
+            workprint@workprintbh.com
+          </a>
+          <a class="db link" href="tel:03125116313">
+            <img class="icone" src="assets/svgs/phone.svg" alt="Ícone de telefone" />
+            (31) 2511-6313
+          </a>
+          <a class="db link" href="tel:031997738363">
+            <img class="icone" src="assets/svgs/whatsapp.svg" alt="Ícone de Whatsapp" />
+            (31) 99773-8363
+          </a>
+        </article>
 
-      <article id="openhours" class="pt5 pl3 pr3">
-        <h1>Horários</h1>
-        <p>Segunda à sexta: 08:30 às 18h30</p>
-        <p>Sábado: 09:00 às 13h00</p>
-      </article>
+        <article id="openhours" class="pt5 pl4 pr4">
+          <h1>Horários</h1>
+          <p>Segunda à sexta: 09:00 às 18h00</p>
+          <!-- <p>Sábado: 09:00 às 13h00</p> -->
+        </article>
 
-      <article id="address" class="pt5 pl3 pr3">
-        <h1>Endereço</h1>
-        <p>Rua Dona Maria Inês, 13</p>
-        <p>Floresta - Belo Horizonte</p>
-        <p>Minas Gerais - Brasil</p>
-        <p>31015-330</p>
-      </article>
-    </section>
+        <article id="address" class="pt5 pl4 pr4">
+          <h1>Endereço</h1>
+          <p>Rua Dona Maria Inês, 13</p>
+          <p>Floresta - Belo Horizonte</p>
+          <p>Minas Gerais - Brasil</p>
+          <p>31015-330</p>
+        </article>
+      </section>
+    </div>
 
     <a id="map" class="mt4 dtc" href="https://goo.gl/maps/VD9qddTDa1THSyXLA" target="_blank" rel="noopener noreferrer">
       <img class="w-100" alt="Clique na imagem para visualizar o mapa!" src="assets/images/map.jpg" />
     </a>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
   </main>
 
 </body>
