--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1>Contato</h1>
           <a class="db link" href="mailto:workprint@workprintbh.com">
             <img class="icone" src="assets/svgs/email.svg" alt="Ícone de email" />
-            workprint@workprintbh.com
+            workprint@workprintbh.com.br
           </a>
           <a class="db link" href="tel:03125116313">
             <img class="icone" src="assets/svgs/phone.svg" alt="Ícone de telefone" />
@@ -81,7 +81,7 @@
 
         <article id="openhours" class="pt5 pl4 pr4">
           <h1>Horários</h1>
-          <p>Segunda à sexta: 09:00 às 18h00</p>
+          <p>Segunda à sexta: 09:00 às 16h00</p>
           <!-- <p>Sábado: 09:00 às 13h00</p> -->
         </article>
 
