--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
         <article id="openhours" class="pt5 pl4 pr4">
           <h1>Horários</h1>
-          <p>Segunda à sexta: 09:00 às 18h00</p>
-          <!-- <p>Sábado: 09:00 às 13h00</p> -->
+          <p>Segunda à sexta: 08:30 às 18:30</p>
+          <p>Sábado: 09:00 às 13:00</p>
         </article>
 
         <article id="address" class="pt5 pl4 pr4">
