--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>Impressões Coloridas</li>
         <li>Plastificações</li>
         <li>Plotagens</li>
-        <li>Recetuários</li>
+        <li>Receituários</li>
       </ul>
     </section>
 
