--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img class="icone" src="assets/svgs/phone.svg" alt="Ícone de telefone" />
             (31) 2511-6313
           </a>
-          <a class="db link" href="tel:031997738363">
+          <a class="db link" href="https://wa.me/5531997738363">
             <img class="icone" src="assets/svgs/whatsapp.svg" alt="Ícone de Whatsapp" />
             (31) 99773-8363
           </a>
