--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
       <section id="infos" class="w-100">
         <article id="contact" class="pt5 pl4 pr4">
           <h1>Contato</h1>
-          <a class="db link" href="mailto:workprint@workprintbh.com">
+          <a class="db link" href="mailto:workprint@workprintbh.com" target=”_blank”>
             <img class="icone" src="assets/svgs/email.svg" alt="Ícone de email" />
             workprint@workprintbh.com.br
           </a>
-          <a class="db link" href="tel:03125116313">
+          <a class="db link" href="tel:03125116313" target=”_blank”>
             <img class="icone" src="assets/svgs/phone.svg" alt="Ícone de telefone" />
             (31) 2511-6313
           </a>
-          <a class="db link" href="https://wa.me/5531997738363">
+          <a class="db link" href="https://wa.me/5531997738363" target=”_blank”>
             <img class="icone" src="assets/svgs/whatsapp.svg" alt="Ícone de Whatsapp" />
             (31) 99773-8363
           </a>
